--- a/language/de.json
+++ b/language/de.json
@@ -1,4 +1,6 @@
 {
     "language": "Deutsch",
-    "title": "Pascalsches Dreieck"
+    "title": "Pascalsches Dreieck",
+    "navbar_history": "Geschichte",
+    "navbar_modelling": "Modellierung"
 }
