--- a/language/en.json
+++ b/language/en.json
@@ -1,4 +1,6 @@
 {
     "language": "English",
-    "title": "Pascal's Triangle"
+    "title": "Pascal's Triangle",
+    "navbar_history": "History",
+    "navbar_modelling": "Modelling"
 }
