--- a/language/ru.json
+++ b/language/ru.json
@@ -1,4 +1,6 @@
 {
     "language": "Русский",
-    "title": "Треугольник Паскаля"
+    "title": "Треугольник Паскаля",
+    "navbar_history": "История",
+    "navbar_modelling": "Моделирование"
 }
