--- a/language/tr.json
+++ b/language/tr.json
@@ -1,4 +1,6 @@
 {
     "language": "Türkçe",
-    "title": "Pascal Üçgeni"
+    "title": "Pascal Üçgeni",
+    "navbar_history": "Tarihçe",
+    "navbar_modelling": "Modelleme"
 }
