--- a/language/de.json
+++ b/language/de.json
@@ -2,5 +2,6 @@
     "language": "Deutsch",
     "title": "Pascalsches Dreieck",
     "navbar_history": "Geschichte",
-    "navbar_modelling": "Modellierung"
+    "navbar_modelling": "Modellierung",
+    "source": "Quelle: "
 }
