--- a/language/en.json
+++ b/language/en.json
@@ -2,5 +2,6 @@
     "language": "English",
     "title": "Pascal's Triangle",
     "navbar_history": "History",
-    "navbar_modelling": "Modelling"
+    "navbar_modelling": "Modelling",
+    "source": "Reference: "
 }
