--- a/language/ru.json
+++ b/language/ru.json
@@ -2,5 +2,6 @@
     "language": "Русский",
     "title": "Треугольник Паскаля",
     "navbar_history": "История",
-    "navbar_modelling": "Моделирование"
+    "navbar_modelling": "Моделирование",
+    "source": "Источник: "
 }
