--- a/language/tr.json
+++ b/language/tr.json
@@ -2,5 +2,6 @@
     "language": "Türkçe",
     "title": "Pascal Üçgeni",
     "navbar_history": "Tarihçe",
-    "navbar_modelling": "Modelleme"
+    "navbar_modelling": "Modelleme",
+    "source": "Kaynakça: "
 }
