--- a/language/ru.json
+++ b/language/ru.json
@@ -14,5 +14,59 @@
     "history_4": "<p>Труд <em>Блеза Паскаля</em> (1623–1662) <em>Traité du triangle arithmétique</em> (Трактат о арифметическом треугольнике), был опубликован посмертно в 1665 году. В этом труде Паскаль собрал несколько известных на тот момент результатов о треугольнике и использовал их для решения задач теории вероятностей. Позже треугольник был назван в честь Паскаля <em>Пьером Рэймоном де Монтмором</em> (1708), который назвал его <em>table de M. Pascal pour les combinaisons</em> (фр. таблица М. Паскаля для комбинаций) и <em>Абрахамом де Мувром</em> (1730), который назвал его <em>Triangulum Arithmeticum PASCALIANUM</em> (лат. арифметический треугольник Паскаля), что стало основой для современного западного названия <i>треугольник Паскаля</i>.</p>",
     "reference_text": "<a class=\"source\">Источник: <a href=\"https://en.wikipedia.org/wiki/Pascal%27s_triangle#History\" target=\"_blank\" rel=\"noopener noreferrer\">https://en.wikipedia.org/wiki/Pascal%27s_triangle#History</a></a>",
     "guide": "<br>Нажмите клавишу <i>C</i>, чтобы переключить отображение чисел<br>Нажмите клавишу <i>+</i> или <i>W</i>, чтобы увеличить количество строк<br>Нажмите клавишу <i>-</i> или <i>S</i>, чтобы уменьшить количество строк<br>Нажмите на строки, чтобы показать сумму элементов",
-    "coming_soon": "Скоро: Новые функции и обновления!<p><br>Мы постоянно работаем над улучшением и расширением вашего опыта. Пока вы уже наслаждаетесь множеством интерактивных инструментов и ресурсов, мы готовим захватывающие обновления, в том числе:<br><br>Новые визуализации – Откройте для себя более динамичные способы взаимодействия с треугольником Паскаля.<br>Продвинутые калькуляторы – Более мощные инструменты для глубокого изучения математических концепций.<br>Функции, ориентированные на пользователей – Мы слушаем вас! Будущие функции на основе ваших отзывов.<br>Подробные руководства и задачи – Новые учебники, тесты и задачи, которые помогут вам в вашем образовательном пути.<br><br>Ожидайте новинок – впереди еще многое!"
+    "coming_soon": "Скоро: Новые функции и обновления!<p><br>Мы постоянно работаем над улучшением и расширением вашего опыта. Пока вы уже наслаждаетесь множеством интерактивных инструментов и ресурсов, мы готовим захватывающие обновления, в том числе:<br><br>Новые визуализации – Откройте для себя более динамичные способы взаимодействия с треугольником Паскаля.<br>Продвинутые калькуляторы – Более мощные инструменты для глубокого изучения математических концепций.<br>Функции, ориентированные на пользователей – Мы слушаем вас! Будущие функции на основе ваших отзывов.<br>Подробные руководства и задачи – Новые учебники, тесты и задачи, которые помогут вам в вашем образовательном пути.<br><br>Ожидайте новинок – впереди еще многое!",
+
+    "quiz_title": "Викторина о треугольнике Паскаля",
+    "quiz_submit_button": "Отправить викторину",
+    "quiz_results_heading": "Ваши результаты",
+    
+    "question-1": "Какой персидский математик впервые описал треугольник Паскаля?",
+    "answer-1-1": "Ал-Караджи",
+    "answer-1-2": "Омар Хайям",
+    "answer-1-3": "Цзя Сянь",
+    
+    "question-2": "В каком веке треугольник Паскаля стал известен в Европе?",
+    "answer-2-1": "11 век",
+    "answer-2-2": "13 век",
+    "answer-2-3": "17 век",
+    
+    "question-3": "Как назывался трактат Блеза Паскаля о треугольнике Паскаля?",
+    "answer-3-1": "Triangulum Arithmeticum",
+    "answer-3-2": "Traité du triangle arithmétique",
+    "answer-3-3": "Арифметика Иордануса Неморского",
+    
+    "question-4": "Как треугольник Паскаля называют в Китае?",
+    "answer-4-1": "Треугольник Ян Хуэя",
+    "answer-4-2": "Треугольник Тартальи",
+    "answer-4-3": "Треугольник Хайяма",
+    
+    "question-5": "Кто разместил треугольник на фронтисписе своей книги в 1527 году?",
+    "answer-5-1": "Петр Аппиан",
+    "answer-5-2": "Михаэль Штифель",
+    "answer-5-3": "Джероламо Кардано",
+    
+    "question-6": "Какова сумма чисел в 4-й строке треугольника Паскаля?",
+    "answer-6-1": "8",
+    "answer-6-2": "16",
+    "answer-6-3": "32",
+    
+    "question-7": "Какая диагональ треугольника Паскаля содержит числа последовательности Фибоначчи?",
+    "answer-7-1": "2-я диагональ",
+    "answer-7-2": "3-я диагональ",
+    "answer-7-3": "4-я диагональ",
+    
+    "question-8": "Что представляет каждая строка треугольника Паскаля?",
+    "answer-8-1": "Биномиальные коэффициенты",
+    "answer-8-2": "Квадратные числа",
+    "answer-8-3": "Кубические коэффициенты",
+    
+    "question-9": "Сколько элементов в 5-й строке треугольника Паскаля?",
+    "answer-9-1": "4",
+    "answer-9-2": "5",
+    "answer-9-3": "6",
+    
+    "question-10": "Какова связь между двумя соседними числами в треугольнике Паскаля?",
+    "answer-10-1": "Они складываются, образуя число ниже",
+    "answer-10-2": "Они являются последовательными числами",
+    "answer-10-3": "Они кратны друг другу"
 }
