--- a/language/de.json
+++ b/language/de.json
@@ -14,5 +14,59 @@
     "history_4": "<p><em>Blaise Pascal</em>'s (1623-1662) <em>Traité du triangle arithmétique</em> (Abhandlung über das Arithmetische Dreieck) wurde 1665 posthum veröffentlicht. In diesem Werk sammelte Pascal mehrere damals bekannte Ergebnisse über das Dreieck und verwendete sie, um Probleme der Wahrscheinlichkeitsrechnung zu lösen. Später wurde das Dreieck nach Pascal von <em>Pierre Raymond de Montmort</em> (1708) als <em>table de M. Pascal pour les combinaisons</em> (Französisch: Herr Pascals Tabelle für Kombinationen) bezeichnet, und von <em>Abraham de Moivre</em> (1730) als <em>Triangulum Arithmeticum PASCALIANUM</em> (Latein: Pascals Arithmetisches Dreieck), was zur Grundlage des modernen westlichen Namens, <i>Pascalsches Dreieck</i>, wurde.</p>",
     "reference_text": "<a class=\"source\">Quelle: <a href=\"https://en.wikipedia.org/wiki/Pascal%27s_triangle#History\" target=\"_blank\" rel=\"noopener noreferrer\">https://en.wikipedia.org/wiki/Pascal%27s_triangle#History</a></a>",
     "guide": "<br>Drücken Sie die <i>C</i>-Taste, um die Zahlendarstellung umzuschalten<br>Drücken Sie die <i>+</i>- oder <i>W</i>-Taste, um die Anzahl der Zeilen zu erhöhen<br>Drücken Sie die <i>-</i>- oder <i>S</i>-Taste, um die Anzahl der Zeilen zu verringern<br>Klicken Sie auf die Zeilen, um die Summe der Elemente anzuzeigen",
-    "coming_soon": "Demnächst: Weitere Funktionen & Updates!<p><br>Wir arbeiten ständig daran, Ihre Erfahrung zu verbessern und zu erweitern. Während Sie bereits eine Vielzahl interaktiver Tools und Ressourcen genießen, gibt es spannende Updates in der Pipeline, darunter:<br><br>Neue Visualisierungen – Entdecken Sie noch dynamischere Möglichkeiten, mit dem Pascalschen Dreieck zu interagieren.<br>Erweiterte Taschenrechner – Leistungsstärkere Tools, die Ihnen helfen, tiefer in mathematische Konzepte einzutauchen.<br>Benutzergesteuerte Funktionen – Wir hören zu! Kommende Funktionen basierend auf Ihrem Feedback.<br>Umfassende Anleitungen und Herausforderungen – Neue Tutorials, Quizze und Herausforderungen, um Ihre Lernreise weiter zu bereichern.<br><br>Bleiben Sie dran – Es kommt noch viel mehr!"
+    "coming_soon": "Demnächst: Weitere Funktionen & Updates!<p><br>Wir arbeiten ständig daran, Ihre Erfahrung zu verbessern und zu erweitern. Während Sie bereits eine Vielzahl interaktiver Tools und Ressourcen genießen, gibt es spannende Updates in der Pipeline, darunter:<br><br>Neue Visualisierungen – Entdecken Sie noch dynamischere Möglichkeiten, mit dem Pascalschen Dreieck zu interagieren.<br>Erweiterte Taschenrechner – Leistungsstärkere Tools, die Ihnen helfen, tiefer in mathematische Konzepte einzutauchen.<br>Benutzergesteuerte Funktionen – Wir hören zu! Kommende Funktionen basierend auf Ihrem Feedback.<br>Umfassende Anleitungen und Herausforderungen – Neue Tutorials, Quizze und Herausforderungen, um Ihre Lernreise weiter zu bereichern.<br><br>Bleiben Sie dran – Es kommt noch viel mehr!",
+
+    "quiz_title": "Pascalsches Dreieck Quiz",
+    "quiz_submit_button": "Quiz absenden",
+    "quiz_results_heading": "Ihre Ergebnisse",
+    
+    "question-1": "Welcher persische Mathematiker beschrieb das Pascalsches Dreieck zuerst?",
+    "answer-1-1": "Al-Karaji",
+    "answer-1-2": "Omar Khayyam",
+    "answer-1-3": "Jia Xian",
+    
+    "question-2": "In welchem Jahrhundert wurde das Pascalsches Dreieck in Europa bekannt?",
+    "answer-2-1": "11. Jahrhundert",
+    "answer-2-2": "13. Jahrhundert",
+    "answer-2-3": "17. Jahrhundert",
+    
+    "question-3": "Wie lautet der Titel von Blaise Pascals Abhandlung über das Pascalsches Dreieck?",
+    "answer-3-1": "Triangulum Arithmeticum",
+    "answer-3-2": "Traité du triangle arithmétique",
+    "answer-3-3": "Arithmetic of Jordanus de Nemore",
+    
+    "question-4": "Wie wird das Pascalsches Dreieck in China genannt?",
+    "answer-4-1": "Yang Huis Dreieck",
+    "answer-4-2": "Tartaglias Dreieck",
+    "answer-4-3": "Khayyams Dreieck",
+    
+    "question-5": "Wer veröffentlichte das Dreieck 1527 auf der Titelseite seines Buches?",
+    "answer-5-1": "Petrus Apianus",
+    "answer-5-2": "Michael Stifel",
+    "answer-5-3": "Gerolamo Cardano",
+    
+    "question-6": "Wie lautet die Summe der Zahlen in der 4. Reihe des Pascalsches Dreiecks?",
+    "answer-6-1": "8",
+    "answer-6-2": "16",
+    "answer-6-3": "32",
+    
+    "question-7": "Welche Diagonale des Pascalsches Dreiecks enthält die Fibonacci-Folge?",
+    "answer-7-1": "2. Diagonale",
+    "answer-7-2": "3. Diagonale",
+    "answer-7-3": "4. Diagonale",
+    
+    "question-8": "Was stellt jede Reihe im Pascalsches Dreieck dar?",
+    "answer-8-1": "Binomialkoeffizienten",
+    "answer-8-2": "Quadratzahlen",
+    "answer-8-3": "Kubik-Koeffizienten",
+    
+    "question-9": "Wie viele Einträge gibt es in der 5. Reihe des Pascalsches Dreiecks?",
+    "answer-9-1": "4",
+    "answer-9-2": "5",
+    "answer-9-3": "6",
+    
+    "question-10": "Was ist die Beziehung zwischen zwei benachbarten Zahlen im Pascalsches Dreieck?",
+    "answer-10-1": "Sie ergeben zusammen die Zahl darunter",
+    "answer-10-2": "Es sind aufeinanderfolgende Zahlen",
+    "answer-10-3": "Es sind Vielfache voneinander"
 }
