--- a/language/en.json
+++ b/language/en.json
@@ -14,5 +14,59 @@
     "history_4": "<p><em>Blaise Pascal</em>'s (1623-1662) <em>Traité du triangle arithmétique</em> (Treatise on Arithmetical Triangle) was published posthumously in 1665. In this, Pascal collected several results then known about the triangle, and employed them to solve problems in probability theory. The triangle was later named for Pascal by <em>Pierre Raymond de Montmort</em> (1708) who called it <em>table de M. Pascal pour les combinaisons</em> (French: Mr. Pascal's table for combinations) <em>and Abraham de Moivre</em> (1730) who called it <em>Triangulum Arithmeticum PASCALIANUM</em> (Latin: Pascal's Arithmetic Triangle), which became the basis of the modern Western name, <i>Pascal's triangle</i>.</p>",
     "reference_text": "<a>Reference: <a href=\"https://en.wikipedia.org/wiki/Pascal%27s_triangle#History\" target=\"_blank\" rel=\"noopener noreferrer\">https://en.wikipedia.org/wiki/Pascal%27s_triangle#History</a></a>",
     "guide": "<br>Press <i>C</i> key to toggle number displays<br>Press <i>+</i> or <i>W</i> key to increase the number of rows<br>Press <i>-</i> or <i>S</i> key to decrease the number of rows<br>Click on the rows to reveal the sum of elements",
-    "coming_soon": "Coming Soon: More Features & Updates!<p><br>We're constantly working to improve and expand your experience. While you're already enjoying a wealth of interactive tools and resources, we have exciting updates in the works, including:<br><br>New Visualizations – Explore even more dynamic ways to interact with Pascal's Triangle.<br>Advanced Calculators – More powerful tools to help you dive deeper into mathematical concepts.<br>User-Driven Features – We're listening! Upcoming features based on your feedback.<br>In-Depth Guides & Challenges – New tutorials, quizzes, and challenges to further enhance your learning journey.<br><br>Stay tuned—there's much more to come!"
+    "coming_soon": "Coming Soon: More Features & Updates!<p><br>We're constantly working to improve and expand your experience. While you're already enjoying a wealth of interactive tools and resources, we have exciting updates in the works, including:<br><br>New Visualizations – Explore even more dynamic ways to interact with Pascal's Triangle.<br>Advanced Calculators – More powerful tools to help you dive deeper into mathematical concepts.<br>User-Driven Features – We're listening! Upcoming features based on your feedback.<br>In-Depth Guides & Challenges – New tutorials, quizzes, and challenges to further enhance your learning journey.<br><br>Stay tuned—there's much more to come!",
+        
+    "quiz_title": "Pascal's Triangle Quiz",
+    "quiz_submit_button": "Submit Quiz",
+    "quiz_results_heading": "Your Results",
+    
+    "question-1": "Which Persian mathematician first described Pascal's Triangle?",
+    "answer-1-1": "Al-Karaji",
+    "answer-1-2": "Omar Khayyam",
+    "answer-1-3": "Jia Xian",
+    
+    "question-2": "In which century did Pascal's Triangle become known in Europe?",
+    "answer-2-1": "11th century",
+    "answer-2-2": "13th century",
+    "answer-2-3": "17th century",
+    
+    "question-3": "What was the title of Blaise Pascal's treatise on Pascal's Triangle?",
+    "answer-3-1": "Triangulum Arithmeticum",
+    "answer-3-2": "Traité du triangle arithmétique",
+    "answer-3-3": "Arithmetic of Jordanus de Nemore",
+    
+    "question-4": "What is Pascal's Triangle called in China?",
+    "answer-4-1": "Yang Hui's Triangle",
+    "answer-4-2": "Tartaglia's Triangle",
+    "answer-4-3": "Khayyam's Triangle",
+    
+    "question-5": "Who published the triangle on the frontispiece of his book in 1527?",
+    "answer-5-1": "Petrus Apianus",
+    "answer-5-2": "Michael Stifel",
+    "answer-5-3": "Gerolamo Cardano",
+    
+    "question-6": "What is the sum of the numbers in the 4th row of Pascal's Triangle?",
+    "answer-6-1": "8",
+    "answer-6-2": "16",
+    "answer-6-3": "32",
+    
+    "question-7": "Which diagonal of Pascal's Triangle contains the Fibonacci sequence?",
+    "answer-7-1": "2nd diagonal",
+    "answer-7-2": "3rd diagonal",
+    "answer-7-3": "4th diagonal",
+    
+    "question-8": "What does each row in Pascal's Triangle represent?",
+    "answer-8-1": "Binomial coefficients",
+    "answer-8-2": "Square numbers",
+    "answer-8-3": "Cubic coefficients",
+    
+    "question-9": "How many entries are there in the 5th row of Pascal's Triangle?",
+    "answer-9-1": "4",
+    "answer-9-2": "5",
+    "answer-9-3": "6",
+    
+    "question-10": "What is the relationship between two adjacent numbers in Pascal's Triangle?",
+    "answer-10-1": "They add up to the number below them",
+    "answer-10-2": "They are consecutive numbers",
+    "answer-10-3": "They are multiples of each other"
 }
